--- a/index.html
+++ b/index.html
@@ -18,12 +18,30 @@ header {
   background-color: #008080;
   color: white;
   padding: 30px 20px;
-  text-align: center;
 }
 
-header h1 {
-  margin: 0;
-  font-size: 2.2em;
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  flex-wrap: wrap;
+  max-width: 1100px;
+  margin: auto;
+}
+
+.profile-pic {
+  width: 260px;
+  border-radius: 12px;
+}
+
+.header-text {
+  max-width: 650px;
+}
+
+.header-text h1 {
+  margin-top: 0;
+  font-size: 2em;
 }
 
 .sms-callout {
@@ -33,7 +51,7 @@ header h1 {
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 1100px;
   margin: 30px auto;
   padding: 0 20px;
 }
@@ -62,7 +80,7 @@ footer {
 }
 
 footer img {
-  max-width: 180px;
+  max-width: 200px;
   margin-top: 15px;
 }
 
@@ -101,14 +119,14 @@ button:hover {
 .modal-content {
   background: white;
   padding: 25px;
-  max-width: 400px;
-  margin: 10% auto;
+  max-width: 420px;
+  margin: 8% auto;
   border-radius: 10px;
   text-align: center;
 }
 
 .modal input {
-  width: 90%;
+  width: 95%;
   padding: 10px;
   margin: 8px 0;
 }
@@ -118,15 +136,27 @@ button:hover {
   font-size: 20px;
   cursor: pointer;
 }
+
+@media(max-width: 768px){
+  .header-container{
+    flex-direction: column;
+    text-align: center;
+  }
+}
 </style>
 </head>
 
 <body>
 
 <header>
-  <h1>Montana Beneduce. Realtor with EXIT Inspired Real Estate</h1>
-  <p>As a registered nurse, I bring a unique perspective to the world of real estate. My background in nursing has given me exceptional communication skills, attention to detail, and strong problem solving abilities. I understand that buying or selling a home is a major decision, so I am committed to providing guidance to the best of my ability to my clients. Let's connect and begin your real estate journey!</p>
-  <div class="sms-callout">TEXT MONTANABHOMES TO 85377 TO SEE NEARBY HOMES!</div>
+  <div class="header-container">
+    <img src="profilepic1.jpg" alt="Montana Beneduce" class="profile-pic">
+    <div class="header-text">
+      <h1>Montana Beneduce. Realtor with EXIT Inspired Real Estate</h1>
+      <p>As a registered nurse, I bring a unique perspective to the world of real estate. My background in nursing has given me exceptional communication skills, attention to detail, and strong problem solving abilities. I understand that buying or selling a home is a major decision, so I am committed to providing guidance to the best of my ability to my clients. Let's connect and begin your real estate journey!</p>
+      <div class="sms-callout">TEXT MONTANABHOMES TO 85377 TO SEE NEARBY HOMES!</div>
+    </div>
+  </div>
 </header>
 
 <div class="container">
@@ -134,47 +164,15 @@ button:hover {
 <div class="section">
 <p>I serve buyers and sellers across Gainesville, Brooker, Starke, Middleburg, and Alachua with one clear mission: protect your investment and position you to win in any market.</p>
 
-<p>North Florida is not one-size-fits-all. From competitive university-driven neighborhoods in Gainesville to acreage and homestead properties in Brooker and Alachua, to the fast-growing commuter markets of Starke and Middleburg, each area requires a different strategy. I bring local knowledge of zoning, flood zones, well and septic systems, new construction, and market trends so you can make informed decisions with confidence.</p>
+<p>North Florida is not one-size-fits-all. From competitive university-driven neighborhoods to acreage and homestead properties, each area requires a different strategy. I bring local knowledge of zoning, flood zones, well and septic systems, new construction, and market trends so you can make informed decisions with confidence.</p>
 
-<p>My background as an ICU nurse sets me apart. I operate with precision, urgency, and calm problem solving skills which matter when negotiations get intense, inspections uncover surprises, or timelines tighten. Clients value my fast response times, same-day showings, clear communication, and strong network of lenders, inspectors, and contractors.</p>
+<p>My background as an ICU nurse sets me apart. I operate with precision, urgency, and calm problem solving skills which matter when negotiations get intense, inspections uncover surprises, or timelines tighten.</p>
 
 <p>I don’t just list homes. I position them. Through accurate pricing, high quality marketing, and strategic negotiation, I help sellers stand out and buyers secure the right property in competitive conditions.</p>
 
-<p>If you want a Realtor who understands both the numbers and the realities of living in North Central Florida and who works relentlessly to protect your best interests, I’m ready to get to work.</p>
+<p>If you want a Realtor who understands both the numbers and the realities of living in North Central Florida and works relentlessly to protect your best interests, I’m ready to get to work.</p>
 
 <button onclick="openModal()">Get Your Free Home Value</button>
-</div>
-
-<!-- AREA PAGES -->
-
-<div class="section">
-<h2>Gainesville Real Estate</h2>
-<p><strong>Market Trends:</strong> Strong demand driven by university and medical sectors.</p>
-<p><strong>Average Price Range:</strong> $250,000 – $450,000</p>
-</div>
-
-<div class="section">
-<h2>Alachua Real Estate</h2>
-<p><strong>Market Trends:</strong> Growing demand for acreage and family homes.</p>
-<p><strong>Average Price Range:</strong> $300,000 – $550,000</p>
-</div>
-
-<div class="section">
-<h2>Starke Real Estate</h2>
-<p><strong>Market Trends:</strong> Increasing commuter and investor interest.</p>
-<p><strong>Average Price Range:</strong> $200,000 – $350,000</p>
-</div>
-
-<div class="section">
-<h2>Middleburg Real Estate</h2>
-<p><strong>Market Trends:</strong> Rapid suburban expansion and new construction.</p>
-<p><strong>Average Price Range:</strong> $275,000 – $425,000</p>
-</div>
-
-<div class="section">
-<h2>Brooker Real Estate</h2>
-<p><strong>Market Trends:</strong> Rural land and homestead property demand.</p>
-<p><strong>Average Price Range:</strong> $150,000 – $300,000</p>
 </div>
 
 <div class="section contact">
@@ -188,30 +186,34 @@ button:hover {
 <a href="https://www.facebook.com/share/17rv5otZza/" target="_blank">
 <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
 </a>
-
-<a href="https://www.zillow.com/profile/mbeneduce" target="_blank">
-<img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Zillow_Logo.svg" alt="Zillow">
-</a>
-</div>
 </div>
 
+<p><a href="https://www.zillow.com/profile/mbeneduce" target="_blank"><strong>Zillow Profile</strong></a></p>
+
+</div>
 </div>
 
 <footer>
-<img src="exitinspired.jpg" alt="EXIT Inspired Real Estate Logo">
+<img src="exit inspired.jpg" alt="EXIT Inspired Real Estate Logo">
 <p>© 2026 Montana Beneduce | EXIT Inspired Real Estate</p>
 </footer>
 
-<!-- POPUP -->
+<!-- HOME VALUE POPUP -->
 <div id="homeValueModal" class="modal">
   <div class="modal-content">
     <span class="close" onclick="closeModal()">&times;</span>
     <h3>What’s Your Home Worth?</h3>
     <p>Enter your info and I’ll send a personalized valuation.</p>
-    <input type="text" placeholder="Property Address">
-    <input type="email" placeholder="Email">
-    <input type="tel" placeholder="Phone">
-    <button>Get My Home Value</button>
+
+<form action="https://formsubmit.co/montana@exitinspired.com" method="POST">
+  <input type="hidden" name="_subject" value="New Home Valuation Lead - Website">
+  <input type="hidden" name="_captcha" value="false">
+  <input type="text" name="Property Address" placeholder="Property Address" required>
+  <input type="email" name="Email" placeholder="Email" required>
+  <input type="tel" name="Phone" placeholder="Phone" required>
+  <button type="submit">Get My Home Value</button>
+</form>
+
   </div>
 </div>
 
@@ -225,7 +227,7 @@ function closeModal() {
 }
 
 window.onload = function() {
-  setTimeout(openModal, 5000);
+  setTimeout(openModal, 6000);
 };
 </script>
 
